--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "astro": "^4.16.16",
+    "astro-index": "^1.0.4",
     "rehype-external-links": "^3.0.0",
     "typescript": "^5.5.4"
   }
