--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^3.1.9",
-    "@astrojs/rss": "^4.0.9",
-    "@astrojs/sitemap": "^3.2.1",
-    "astro": "^4.16.16",
-    "astro-index": "^1.0.4",
-    "rehype-external-links": "^3.0.0",
-    "typescript": "^5.5.4"
+    "@astrojs/check": "0.9.4",
+    "@astrojs/mdx": "4.0.4",
+    "@astrojs/rss": "4.0.11",
+    "@astrojs/sitemap": "3.2.1",
+    "astro": "5.1.4",
+    "astro-index": "1.0.4",
+    "rehype-external-links": "3.0.0",
+    "typescript": "5.7.3"
   }
 }
