--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@astrojs/sitemap": "3.2.1",
         "astro": "4.16.18",
         "astro-index": "1.0.4",
+        "astro-simple-carousel": "^1.0.9",
         "rehype-external-links": "3.0.0",
         "typescript": "5.7.3"
     }
