--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     },
     "dependencies": {
         "@astrojs/check": "0.9.4",
-        "@astrojs/mdx": "4.0.5",
+        "@astrojs/mdx": "^4.2.3",
         "@astrojs/rss": "4.0.11",
-        "@astrojs/sitemap": "3.2.1",
-        "astro": "5.1.5",
+        "@astrojs/sitemap": "^3.3.0",
+        "astro": "^5.6.1",
         "astro-index": "1.0.4",
         "astro-simple-carousel": "^1.0.9",
         "rehype-external-links": "3.0.0",
